# app/Models/CaseMessage.php
@@ -14,4 +14,8 @@ class CaseMessage extends Model
         'message_id',
         'state',
     ];
+
+    public function message(){
+        return $this->belongsTo(Message::class, 'message_id', 'id');
+    }
 }
